--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,7 @@
 /*Блок с form*/
 .container_form .form_block {
   min-height: 200px;
-  background: #133ac8;
+  background: #18aebcab;
 }
 .container_form .form_block .form_block_in {
   padding: 33px 56px;
@@ -31,8 +31,8 @@
   margin-right: 1.7%;
 }
 .container_form .form_block .form_block_in form .form_input .form_input_item {
-  border: 1px solid #7f95e1;
-  background: #133ac8;
+  border: 1px solid #fff;
+  background: #18aebcab;
   padding: 0 20px;
   font-size: 16px;
   line-height: 59px;
@@ -48,7 +48,7 @@
 .container_form .form_block .form_block_in form .form_input_item_submit {
   box-shadow: 0px 3px 15px 0px rgba(0, 0, 0, 0.35);
   border: 0;
-  background: #134ec6;
+  background: #17b3bf;
   text-align: center;
   text-transform: uppercase;
   font-size: 16px;
@@ -92,12 +92,12 @@
   line-height: 22px;
   letter-spacing: 1.15px;
   z-index: 10;
-  color: #8a8a8a;
+  color: #fff;
   font-family: "ProximaNova", Arial, sans-serif;
   padding-left: 22px;
 }
 .checkbox input + label a {
-  color: #8a8a8a;
+  color: #fff;
 }
 .checkbox input:not(checked) + label:before {
   content: '';
@@ -700,7 +700,7 @@ label.error {
   z-index: 5;
 }
 #our_projects .our_projects_tab_block_text {
-  background: url('../img/our_projects_tab_block.png') no-repeat center / cover;
+  background-image: linear-gradient(to right, #51d5e0 30%, #0d8f9a 70%);
   position: relative;
   z-index: 10;
   padding: 11px 32px 25px;
@@ -770,6 +770,20 @@ label.error {
   z-index: 15;
   margin-top: -103px;
 }
+  .our_project_slider_in_item{
+    position: relative;
+  }
+  .our_project_slider_in_item:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 15px;
+    width: 70px;
+    height: 70px;
+    background: url('../img/cube_logo.png') no-repeat;
+    -webkit-background-size: contain;
+    background-size: contain;
+  }
 #our_projects .our_project_slider_in .slider_in li {
   margin: 0 16px 10px;
 }
@@ -1001,7 +1015,6 @@ label.error {
   position: relative;
 }
 #compare .container_form .form_input_item_submit {
-  background: url("../img/button_vs.png") no-repeat center / cover;
   width: 270px;
   height: 61px;
   display: inline-block;
@@ -1119,6 +1132,17 @@ label.error {
   width: 45px;
   height: 47px;
 }
+#development .development_block .development_block_item .development_block_item_icon:before{
+    content: '';
+    position: absolute;
+    top: 45px;
+    left: 20px;
+    width: 70px;
+    height: 70px;
+    background: url('../img/cube_logo.png') no-repeat;
+    -webkit-background-size: contain;
+    background-size: contain;
+  }
 #development .development_block .development_block_item:nth-child(2) .development_block_item_icon div {
   width: 45px;
   height: 71px;
@@ -1453,7 +1477,7 @@ label.error {
   transform: rotate(180deg);
 }
 #priemushestva #priemushestva_slider_tab {
-  background: rgba(19, 58, 200, 0.59);
+  background: #18aebcab;
   min-height: 130px;
   box-shadow: 0 0 15px 0 rgba(43, 24, 121, 0.15);
 }
@@ -2220,7 +2244,7 @@ label.error {
     font-size: 138px;
   }
   .header-bottom {
-    background: linear-gradient(92.67deg, #133BC8 3.97%, #18B7BB 95.83%) !important;
+    background: #c947778c;
   }
   .header-bottom-new {
     margin: 30px 0 30px 17px !important;
@@ -2375,7 +2399,7 @@ label.error {
     margin-bottom: -112px;
   }
   #our_projects .our_projects_tab_block_text {
-    background: url('../img/our_projects_tab_layer.png') no-repeat center / cover;
+    background-image: linear-gradient(to right, #51d5e0 30%, #0d8f9a 70%);
     padding: 48px 32px 145px;
   }
   #our_projects .our_projects_tab_block_text_right {
@@ -2579,7 +2603,6 @@ label.error {
     min-height: 80px !important;
   }
   #compare .container_form .form_input_item_submit {
-    background: linear-gradient(90deg, #DF175D 1.95%, #9234CE 100%);
     box-shadow: 0 3px 15px rgba(0, 0, 0, 0.35);
   }
   #principle {
@@ -2627,6 +2650,11 @@ label.error {
   }
   #development .development_block_item_icon {
     margin-top: 80px !important;
+  }
+  #development .development_block .development_block_item .development_block_item_icon:before {
+    top: 5px;
+    left: 50%;
+    transform: translate(-155px); 
   }
   #development .development_block_item_captoin {
     min-height: 141px !important;
@@ -2692,9 +2720,6 @@ label.error {
     background-position: 71% top;
     background-size: 402%;
   }
-  #footer .footer_block {
-    background: linear-gradient(92.04deg, #133BC8 2.41%, #18B7BB 97.47%) !important;
-  }
   #footer .footer_block .container_form {
     position: relative;
     top: -32px;
@@ -2709,10 +2734,7 @@ label.error {
     top: 0;
     left: 0;
   }
-  .footer_block_bottom .footer_block_bottom_hc:before {
-    width: 53.55px !important;
-    height: 49.25px !important;
-  }
+
   .footer_block_bottom .footer_block_bottom_address {
     position: absolute;
     top: 35px;
@@ -2826,6 +2848,20 @@ label.error {
   }
   #development .development_block_item_icon {
     margin-top: 50px !important;
+  }
+  #development .development_block .development_block_item:before {
+    top: 3vh;
+    left: 4vw;
+    content: '';
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    background: url(../img/cube_logo.png) no-repeat;
+    -webkit-background-size: contain;
+    background-size: contain;
+  }  
+  #development .development_block .development_block_item .development_block_item_icon:before {
+  background: none;
   }
   #footer .form_block_name {
     font-size: 22px !important;
